objects/Travel_Form__c.object
<CustomObject>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <description>From Location</description>
        <label>From</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Location__c</fullName>
        <label>To Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Travel Form</label>
    <nameField>
        <displayFormat>TRV#{00000000}</displayFormat>
        <label>Transaction Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>